--- a/practica clase1/index.html
+++ b/practica clase1/index.html
@@ -11,6 +11,7 @@
    </header>
    <section>
     <table border="1">
+        <caption>rowspan</caption>
     <tr>
         <td></td>
         <td>viernes</td>
@@ -22,14 +23,12 @@
     </tr>
     <tr>
         <td>Desayuno</td>
-        <td>cerrado</td>
-        <td></td>
+        <td rowspan="2" colspan="2">cerrado</td>
+        
         <td>abierto</td>
     </tr>
     <tr>
      <td>Comida</td>
-     <td>cerrado</td>
-     <td></td>
      <td>solo vips</td>
     </tr>
     <tr> 
